<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simsu451.androidprojekt.wall.WallActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postButton"
        android:layout_above="@+id/profileButton">

        <ListView
            android:descendantFocusability="afterDescendants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lwWall" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/profileButton"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/what_s_on_your_mind"
        android:ems="13"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etPost" />

    <Button
        android:text="@string/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/etPost"
        android:id="@+id/postButton" />

    <Button
        android:text="@string/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/profileButton"
        android:id="@+id/usersButton" />

</RelativeLayout>
